k8s/hasura-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helix-ehr-hasura
  namespace: helix-ehr
spec:
  selector:
    app: helix-ehr-hasura
  ports:
    - name: http
      port: 8080
      targetPort: 8080
